docs/api/qiskit/0.24/qiskit.ignis.characterization.BaseCoherenceFitter.md
---
title: BaseCoherenceFitter
description: API reference for qiskit.ignis.characterization.BaseCoherenceFitter
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.ignis.characterization.BaseCoherenceFitter
---

<span id="qiskit-ignis-characterization-basecoherencefitter" />

# qiskit.ignis.characterization.BaseCoherenceFitter

<span id="qiskit.ignis.characterization.BaseCoherenceFitter" />

`BaseCoherenceFitter(description, backend_result, xdata, qubits, fit_fun, fit_p0, fit_bounds, circuit_names, series=None, expected_state='0', time_index=0, time_unit='micro-seconds')` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.5/qiskit/ignis/characterization/fitters.py "view source code")

Base class for fitters of characteristic times

**Parameters**

*   **description** (`str`) – description of the fitter’s purpose, e.g. ‘T1’.
*   **backend\_result** (`Union`\[`Result`, `List`\[`Result`]]) – result of execution on the backend.
*   **xdata** (`Union`\[`List`\[`float`], `array`]) – delay times of the circuits.
*   **qubits** (`List`\[`int`]) – the qubits to be characterized.
*   **fit\_fun** (`Callable`\[…, `float`]) – equivalent to parameter f of scipy.curve\_fit.
*   **fit\_p0** (`List`\[`float`]) – equivalent to parameter p0 of scipy.curve\_fit.
*   **fit\_bounds** (`Tuple`\[`List`\[`float`], `List`\[`float`]]) – equivalent to parameter bounds of scipy.curve\_fit.
*   **circuit\_names** (`List`\[`str`]) – names of the circuits, should be the same length as xdata. Full circuit name will be these plus the series name.
*   **series** (`Optional`\[`List`\[`str`]]) – list of circuit name tags
*   **expected\_state** (`str`) – is the circuit supposed to end up in ‘0’ or ‘1’?
*   **time\_index** (`int`) – among parameters of fit\_fun, which one is the characteristic time.
*   **time\_unit** (`str`) – unit of delay times in xdata.

### \_\_init\_\_

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.__init__" />

`__init__(description, backend_result, xdata, qubits, fit_fun, fit_p0, fit_bounds, circuit_names, series=None, expected_state='0', time_index=0, time_unit='micro-seconds')`

Initialize self. See help(type(self)) for accurate signature.

## Methods

|                                                                                                                                                                                |                                                                        |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------- |
| [`__init__`](#qiskit.ignis.characterization.BaseCoherenceFitter.__init__ "qiskit.ignis.characterization.BaseCoherenceFitter.__init__")(description, backend\_result, xdata, …) | Initialize self.                                                       |
| [`add_data`](#qiskit.ignis.characterization.BaseCoherenceFitter.add_data "qiskit.ignis.characterization.BaseCoherenceFitter.add_data")(results\[, recalc, refit])              | Add new execution results to previous execution results                |
| [`fit_data`](#qiskit.ignis.characterization.BaseCoherenceFitter.fit_data "qiskit.ignis.characterization.BaseCoherenceFitter.fit_data")(\[qid, p0, bounds, series])             | Fit the curve.                                                         |
| [`plot`](#qiskit.ignis.characterization.BaseCoherenceFitter.plot "qiskit.ignis.characterization.BaseCoherenceFitter.plot")(qind, series\[, ax, show\_plot])                    | Plot coherence data.                                                   |
| [`time`](#qiskit.ignis.characterization.BaseCoherenceFitter.time "qiskit.ignis.characterization.BaseCoherenceFitter.time")(\[qid, series])                                     | Return the characteristic time for the given qubit and series          |
| [`time_err`](#qiskit.ignis.characterization.BaseCoherenceFitter.time_err "qiskit.ignis.characterization.BaseCoherenceFitter.time_err")(\[qid, series])                         | Return the error of characteristic time for the given qubit and series |

## Attributes

|                                                                                                                                                             |                                                                                       |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------- |
| [`backend_result`](#qiskit.ignis.characterization.BaseCoherenceFitter.backend_result "qiskit.ignis.characterization.BaseCoherenceFitter.backend_result")    | Return the execution results                                                          |
| [`description`](#qiskit.ignis.characterization.BaseCoherenceFitter.description "qiskit.ignis.characterization.BaseCoherenceFitter.description")             | Return the fitter’s purpose, e.g.                                                     |
| [`fit_fun`](#qiskit.ignis.characterization.BaseCoherenceFitter.fit_fun "qiskit.ignis.characterization.BaseCoherenceFitter.fit_fun")                         | Return the function used in the fit, e.g.                                             |
| [`measured_qubits`](#qiskit.ignis.characterization.BaseCoherenceFitter.measured_qubits "qiskit.ignis.characterization.BaseCoherenceFitter.measured_qubits") | Return the indices of the qubits to be characterized                                  |
| [`params`](#qiskit.ignis.characterization.BaseCoherenceFitter.params "qiskit.ignis.characterization.BaseCoherenceFitter.params")                            | Return the fit function parameters that were calculated by curve\_fit                 |
| [`params_err`](#qiskit.ignis.characterization.BaseCoherenceFitter.params_err "qiskit.ignis.characterization.BaseCoherenceFitter.params_err")                | Return the error of the fit function parameters                                       |
| [`series`](#qiskit.ignis.characterization.BaseCoherenceFitter.series "qiskit.ignis.characterization.BaseCoherenceFitter.series")                            | Return the list of series for the data                                                |
| [`xdata`](#qiskit.ignis.characterization.BaseCoherenceFitter.xdata "qiskit.ignis.characterization.BaseCoherenceFitter.xdata")                               | Return the data points on the x-axis, the independenet parameter which is fit against |
| [`ydata`](#qiskit.ignis.characterization.BaseCoherenceFitter.ydata "qiskit.ignis.characterization.BaseCoherenceFitter.ydata")                               | Return the data points on the y-axis                                                  |

### add\_data

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.add_data" />

`add_data(results, recalc=True, refit=True)`

Add new execution results to previous execution results

**Parameters**

*   **results** (`Union`\[`Result`, `List`\[`Result`]]) – new execution results
*   **recalc** (`bool`) – whether tp recalculate the data
*   **refit** (`bool`) – whether to refit the data

### backend\_result

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.backend_result" />

`property backend_result`

Return the execution results

**Return type**

`Union`\[`Result`, `List`\[`Result`]]

### description

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.description" />

`property description`

Return the fitter’s purpose, e.g. ‘T1’

**Return type**

`str`

### fit\_data

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.fit_data" />

`fit_data(qid=- 1, p0=None, bounds=None, series=None)`

Fit the curve.

Compute self.\_params and self.\_params\_err

**Parameters**

*   **qid** (`int`) – qubit for fitting. If -1 fit for all the qubits
*   **p0** (`Optional`\[`List`\[`float`]]) – initial guess, equivalent to p0 in scipy.optimize
*   **bounds** (`Optional`\[`Tuple`\[`List`\[`float`], `List`\[`float`]]]) – bounds, equivalent to bounds in scipy.optimize
*   **series** (`Optional`\[`str`]) – series to fit (if None fit all)

### fit\_fun

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.fit_fun" />

`property fit_fun`

Return the function used in the fit, e.g. BaseFitter.\_exp\_fit\_fun

**Return type**

`Callable`

### measured\_qubits

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.measured_qubits" />

`property measured_qubits`

Return the indices of the qubits to be characterized

**Return type**

`List`\[`int`]

### params

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.params" />

`property params`

Return the fit function parameters that were calculated by curve\_fit

**Return type**

`List`\[`float`]

### params\_err

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.params_err" />

`property params_err`

Return the error of the fit function parameters

**Return type**

`List`\[`float`]

### plot

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.plot" />

`plot(qind, series, ax=None, show_plot=True)`

Plot coherence data.

**Parameters**

*   **qind** (`int`) – qubit index to plot
*   **series** (`str`) – which series to plot (if list then plot multiple)
*   **ax** (`Optional`\[`Any`]) – plot axes
*   **show\_plot** (`bool`) – whether to call plt.show()

**Returns**

The axes object

**Return type**

Axes

**Raises**

**ImportError** – if matplotlib is not installed

### series

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.series" />

`property series`

Return the list of series for the data

**Return type**

`Optional`\[`List`\[`str`]]

### time

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.time" />

`time(qid=- 1, series='0')`

Return the characteristic time for the given qubit and series

**Parameters**

*   **qid** (`int`) – the qubit index (or all qubits if -1)
*   **series** (`str`) – the series to get

**Return type**

`Union`\[`float`, `List`\[`float`]]

**Returns**

The characteristic time of the qubit, or all qubits

### time\_err

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.time_err" />

`time_err(qid=- 1, series='0')`

Return the error of characteristic time for the given qubit and series

**Parameters**

*   **qid** (`int`) – the qubit index (or all qubits if -1)
*   **series** (`str`) – the series to get

**Return type**

`Union`\[`float`, `List`\[`float`]]

**Returns**

The error of the characteristic time of the qubit, or all qubits

### xdata

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.xdata" />

`property xdata`

Return the data points on the x-axis, the independenet parameter which is fit against

**Return type**

`Union`\[`List`\[`float`], `array`]

### ydata

<span id="qiskit.ignis.characterization.BaseCoherenceFitter.ydata" />

`property ydata`

Return the data points on the y-axis

The data points are returning in the form of a list of dictionaries:

> *   **ydata\[i]\[‘mean’] is a list, where item**
>
>     no. j is the probability of success of qubit i for a circuit that lasts xdata\[j].
>
> *   **ydata\[i]\[‘std’] is a list, where ydata\[‘std’]\[j] is the**
>
>     standard deviation of the success of qubit i.

**Return type**

`List`\[`Dict`]

